--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mixeden</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,700" rel="stylesheet">
-    <link href="style/style.css" rel="stylesheet">
+    <title>Redirecting to Facel</title>
+    <meta http-equiv="refresh" content="1;URL=https://facel.tech" />
 </head>
-<body>
-    <div id="itisme">Think more.</div>
-</body>
 </html>
