--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
     <meta charset="UTF-8">
     <title>Redirecting to Facel</title>
     <meta http-equiv="refresh" content="1;URL=https://facel.tech" />
+     <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
 </head>
+<body>
+    <div class="renamed">
+        <h1>We have renamed to Facel, so we redirect you to the proper fomain</h1>
+    </div>
+</body>
 </html>
