--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Redirecting to Facel</title>
     <meta http-equiv="refresh" content="1;URL=https://facel.tech" />
-     <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
+    <link href="style/style.css" rel="stylesheet">
 </head>
 <body>
     <div class="renamed">
